deployment/kubernetes/gr6frontend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels:
      app: &label react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *label
  template:
    metadata:
      labels:
        app: *label
    spec:  
      containers:
      - name: frontend-react
        image: registry.gitlab.com/kdg-ti/integratieproject-2/teams-22-23/team-6/front-end:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: registry-credentials-frontend
      restartPolicy: Always

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "frontend-service"
  labels:
    app: &label react
spec:
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: *label
