deployment/kubernetes/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    #   networking.gke.io/v1beta1.FrontendConfig: "httpsredirection"
    #   networking.gke.io/managed-certificates: "sslcert"
    kubernetes.io/ingress.global-static-ip-name: "ingress-ipv4"
spec:
  rules:
  - host: "www.risk.gq"
    http:
      paths: 
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: "/api/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: "/ai/*"
        pathType: ImplementationSpecific
        backend:
          service: 
            name: ai-service
            port:
              number: 5000
